# icp-todo-crud

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
src/rust_crud_app_backend/: Cargo.toml  rust_crud_app_backend.did
src/rust_crud_app_backend/src/: app.rs  lib.rs  routes.rs  todo_type.rs  utils.rs
src/rust_crud_app_frontend/: package.json
src/rust_crud_app_frontend/src/: App.js
