[package]
name = "rust_crud_app_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.17"
serde = {version = "1.0", features = ["derive"]}
ic-cdk-timers = "0.11"
ic-stable-structures = "0.6"
ic-rand = "0.1.4"
# pocket-ic = "*"